--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,73 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.SwQuotes__main {
   align-items: center;
-}
-
-.footer {
+  background: var(--black-color);
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  flex-flow: row wrap;
+  height: 100vh;
   justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.SwQuotes__container {
+  border-bottom: 3px solid var(--yellow-color);
+  border-radius: 0px;
+  border-top: 3px solid var(--yellow-color);
+  height: calc(100% - 100px);
+  max-width: 800px;
+  position: relative;
+  text-align: center;
+  width: calc(100% - 100px);
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+@media screen and (min-width: 768px) {
+  .SwQuotes__container {
+    border-left: 3px solid var(--yellow-color);
+    border-radius: 10px;
+    border-right: 3px solid var(--yellow-color);
+    height: auto;
+  }
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
+.SwQuotes__title {
+  position: relative;
+  top: -12px;
+  display: inline-block;
+  margin: 0px;
+  padding: 0 1.5rem;
+  background-color: var(--black-color);
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+  color: var(--yellow-color);
+  font-size: 0.9rem;
+  font-style: italic;
+  font-weight: 600;
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
+.SwQuotes__new {
+  width: 100%;
+  padding: 10px;
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
+  background: transparent;
+  border: 2px solid var(--white-color);
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  color: var(--white-color);
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
 }
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@media screen and (min-width: 768px) {
+  .SwQuotes__new {
+    margin: 0 3rem 3rem;
+    width: calc(100% - 6rem);
   }
+}
+.SwQuotes__new:hover {
+  border: 2px solid var(--yellow-color);
+  color: var(--yellow-color);
+  cursor: pointer;
+}
+
+.SwQuotes__new:focus {
+  outline: 2px dotted var(--yellow-color);
+  outline-offset: 5px;
 }
