--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,13 @@
-html,
+:root {
+  --black-color: #1C1C1C;
+  --yellow-color: #FFE81F;
+  --white-color: #FEFEFE;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  margin: 0px;
+  padding: 0px;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
 }
