--- a/components/Quotes.module.css
+++ b/components/Quotes.module.css
@@ -47,7 +47,7 @@
 }
 @media screen and (min-width: 768px) {
   .SwQuotes__new {
-    margin: 0 3rem 3rem;
+    margin: 0 3rem 1rem 3rem;
     width: calc(100% - 6rem);
   }
 }
@@ -60,4 +60,9 @@
 .SwQuotes__new:focus {
   outline: 2px dotted var(--yellow-color);
   outline-offset: 5px;
+}
+
+.SwQuotes__footer {
+  padding: 0 3rem 1rem 3rem;
+  text-align: left;
 }
